feat: Implement banner resize on search
This commit introduces a dynamic banner that resizes upon the user's first search action. The banner transitions from a full-screen landing element to a smaller, persistent header.

This change improves the user experience by shifting focus to the country data after a search is performed, while maintaining the banner as a visual header.

Changes include:
- A `resizeBanner()` JavaScript function to alter CSS properties.
- CSS transitions for smooth height and font size animations.
- Conversion of the banner's background image from JPG to WebP for faster load times.

--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -1,24 +1,24 @@
 .banner {
-  background-image: url("./../images/pexels-maximilian-ruther-199439233-11546831.jpg");
-  background-size: cover;
-  /* background-position: -2px -148px; */
-  /* background-position: center; */
-  /* centers image */
-  background-repeat: no-repeat;
-  width: 100vw; /* full viewport width */
-  height: 100vh;
+	background-image: url('./../images/pexels-maximilian-ruther-199439233-11546831.webp');
+	background-size: cover;
+	background-repeat: no-repeat;
+	width: 100vw;
+	height: 100vh;
+	transition: height 1s ease;
 }
 
 .landing-headings {
-  font-family: Alegreya Serif, serif;
+	font-family: Alegreya Serif, serif;
 }
 
 .landing-heading1 {
-  font-size: 7vw;
-  color: black;
+	font-size: max(30px, 7vw);
+	color: black;
+	transition: all 1s ease;
 }
 
 .landing-heading2 {
-  font-size: 3vw;
-  color: black;
+	font-size: max(16px, 3vw);
+	color: black;
+	transition: all 1s ease;
 }
