--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,7 @@
 body {
 	font-family: system-ui, sans-serif;
+	min-width: 360px;
 }
-#errors {
-	color: #c00;
-	margin-top: 8px;
-}
-#suggestions button {
-	margin-right: 8px;
-	margin-top: 8px;
-}
-
 .borders-list {
 	display: flex;
 	flex-wrap: wrap;
