--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,7 @@
 body {
 	font-family: system-ui, sans-serif;
+	min-width: 360px;
 }
-#errors {
-	color: #c00;
-	margin-top: 8px;
-}
-#suggestions button {
-	margin-right: 8px;
-	margin-top: 8px;
-}
-/* section {
-	margin-top: 16px;
-} */
-
 .borders-list {
 	display: flex;
 	flex-wrap: wrap;
@@ -20,4 +9,10 @@ body {
 }
 .borders-list button {
 	width: fit-content;
+}
+
+.app-wrapper {
+	display: grid;
+	min-height: 100vh;
+	grid-template-rows: 1fr auto;
 }
