feat: Enhance UI with Alegreya font and improved styling
Integrates the Alegreya font to create a more refined and consistent visual identity for the application. This change improves the overall user experience by enhancing readability and modernizing the design.

- Sets Alegreya as the primary font and imports it from Google Fonts.

- Adds new utility classes for card colors, box shadows, and button styling to improve component aesthetics.

- Streamlines assets by renaming the banner image and removing old, unused images.

- Refactors and cleans up CSS, removing redundant styles.

- Adjusts layout and text for better clarity in the country details view.

--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -1,13 +1,9 @@
 .banner {
-	background-image: radial-gradient(#00000099, #00000099), url("./../images/pexels-maximilian-ruther-199439233-11546831.webp");
+	background-image: radial-gradient(#00000099, #00000099), url("./../images/banner.webp");
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 100vh;
 	transition: height 1s ease;
-}
-
-.landing-headings {
-	font-family: Alegreya Serif, serif;
 }
 
 .landing-heading1 {
@@ -29,8 +25,4 @@
 }
 .search-input {
 	outline: none;
-}
-
-#country-input::before {
-	content: "🔍";
 }
