--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
-	font-family: system-ui, sans-serif;
+	font-family: Alegreya, system-ui, sans-serif;
 	min-width: 360px;
+	color: #20252a;
 }
 .borders-list {
 	display: flex;
@@ -15,4 +16,20 @@ body {
 	display: grid;
 	min-height: 100vh;
 	grid-template-rows: 1fr auto;
+}
+
+.row {
+	--bs-gutter-x: 3.5rem !important;
+}
+
+.card-color {
+	background-color: #6c828d;
+}
+.box-shadow {
+	box-shadow: 25px 25px 35px -5px black;
+	border: solid 1px black;
+}
+
+.neighbor-country-btn button {
+	border-radius: 3px !important;
 }
