--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -1,28 +1,25 @@
 .banner {
-	background-image: radial-gradient(#00000099, #00000099), url("./../images/banner.webp");
-	background-size: cover;
-	background-repeat: no-repeat;
-	height: 100vh;
-	transition: height 1s ease;
+  background-image: url("./../images/banner.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  transition: height 1s ease;
 }
 
-.landing-heading1 {
-	font-size: calc(1rem + 5vw);
-	font-weight: 900;
-	color: #fff;
-	transition: all 1s ease;
+#landing-heading1 {
+  font-size: 8vw;
+  color: black;
 }
 
-.landing-heading2 {
-	font-size: calc(1rem + 2.5vw);
-	color: #fff;
-	transition: all 1s ease;
+#landing-heading2 {
+  font-size: 3vw;
+  color: black;
 }
 .banner-content {
-	position: relative;
-	top: 200px;
-	height: fit-content;
+  position: relative;
+  top: 75px;
+  height: fit-content;
 }
 .search-input {
-	outline: none;
+  outline: none;
 }
