--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,44 +1,51 @@
 body {
-	font-family: Alegreya, system-ui, sans-serif;
-	min-width: 360px;
-	color: #20252a;
-	background-color: #607d8b99;
+  font-family: Alegreya, system-ui, sans-serif;
+  min-width: 360px;
+  color: #20252a;
+  background-color: #607d8b99;
 }
 .borders-list {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 .borders-list button {
-	width: fit-content;
+  width: fit-content;
 }
 
 .app-wrapper {
-	display: grid;
-	min-height: 100vh;
-	grid-template-rows: 1fr auto;
+  display: grid;
+  min-height: 100vh;
+  grid-template-rows: 1fr auto;
 }
 
 .row {
-	--bs-gutter-x: 3.5rem !important;
+  --bs-gutter-x: 3.5rem !important;
 }
 
 .card-color {
-	background-color: #6c828d !important;
+  background-color: #6c828d;
 }
 .box-shadow {
-	box-shadow: 25px 25px 35px -5px black;
-	border: solid 1px black !important;
+  box-shadow: 25px 25px 35px -5px black;
+  border: solid 1px black;
 }
 
 .neighbor-country-btn button {
-	border-radius: 3px !important;
+  border-radius: 5%;
 }
 
 .list-group {
-	background-color: #6c828d !important;
+  background-color: #6c828d;
 }
 .list-group-item {
-	background: transparent;
-	border: none !important;
+  background: transparent;
+  border: none !important;
+}
+
+.summary {
+  border: 1px solid black;
+}
+.country-card__grid li {
+  padding-bottom: 0px;
 }
